Auto-fix missing files, use gapless player on tracks for consistency

--- a/src/main/resources/templates/partyflow.hbs.css
+++ b/src/main/resources/templates/partyflow.hbs.css
@@ -389,7 +389,7 @@ a.track:link:hover, a.track:link:focus {
 }
 
 body:not(.yesscript) .yesscript {
-	display: none;
+	display: none !important;
 }
 .flex-break {
 	width: 0; height: 0;
